[tool.poetry]
name = "pygnssutils"
version = "0.0.0"
description = "GNSS Command Line Utilities"
authors = ["Steve Smith <semuadmin@semuconsulting.com>"]
maintainers = ["Steve Smith <semuadmin@semuconsulting.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/semuconsulting/pygnssutils"
documentation = "https://www.semuconsulting.com/pygnssutils/"
repository = "https://github.com/semuconsulting/pygnssutils"
keywords = ["GNSS", "GPS", "utilities", "navigation"]
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: GIS",
]
packages = [{include = "pygnssutils", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
certifi = "^2025.0.0"
paho-mqtt = "^2.1.0"
pyserial = "^3.5"
pyspartn = "^1.0.7"
pyubx2 = "^1.2.58"
pysbf2 = "^1.0.0"
pyubxutils = "^1.0.3"
pyqgc = "^0.1.1"
tb-mqtt-client = "^1.13.11"
tb-paho-mqtt-client = "^2.1.2"
setuptools = "^75.0.0"
mmh3 = "^5.2.0"

[tool.poetry.group.build.dependencies]
build = "*"
packaging = "^24.2"
pip = "*"
setuptools = "^75.0.0"
twine = "^6.1.0"
wheel = "*"

[tool.poetry.group.test.dependencies]
awscli = "*"
bandit = "*"
black = "*"
certifi = "*"
isort = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
Sphinx = "*"
sphinx-rtd-theme = "*"

[tool.poetry.group.deploy.dependencies]
# Deploy group includes both build and test dependencies
# Poetry will automatically include them since we specify the groups above

[tool.poetry.scripts]
gnssstreamer = "pygnssutils.gnssstreamer_cli:main"
gnssserver = "pygnssutils.gnssserver_cli:main"
gnssntripclient = "pygnssutils.gnssntripclient_cli:main"
gnssmqttclient = "pygnssutils.gnssmqttclient_cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']

[tool.isort]
py_version = 310
profile = "black"

[tool.bandit]
exclude_dirs = ["docs", "examples", "references", "tests"]
skips = [
    "B104",
    "B105",
    "B307",
    "B311",
] # bind 0.0.0.0; hard coded pwd, use of eval, random gen

[tool.pylint]
jobs = 0
recursive = "y"
reports = "y"
py-version = "3.10"
fail-under = "9.8"
fail-on = "E,F"
clear-cache-post-run = "y"
disable = """
    raw-checker-failed,
    bad-inline-option,
    locally-disabled,
    file-ignored,
    suppressed-message,
    useless-suppression,
    deprecated-pragma,
    use-symbolic-message-instead,
    logging-fstring-interpolation
"""

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov --cov-report html --cov-fail-under 35"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
fail_under = 35

[tool.coverage.html]
directory = "htmlcov"